<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alumnodam.proyecto2.factura">

    <TextView
        android:id="@+id/pedidostitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedidos"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pedidoseach"
        android:layout_below="@id/pedidostitle"
        >



    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pedidostotal"
        android:layout_below="@+id/pedidoseach">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            >

            <TextView
                android:text="TipoImp"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:gravity="center" />

            <TextView
                android:text="1%"
                android:layout_weight="1"
                android:gravity="right" />

            <TextView
                android:text="0.00"
                android:layout_weight="1"
                android:gravity="right"
                android:id="@+id/preciototunid" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="30dp">

            <TextView
                android:text="Total"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:gravity="center" />

            <TextView
                android:id="@+id/totalunid"
                android:text="0"
                android:layout_weight="1"
                android:gravity="right" />

            <TextView
                android:text="0.00"
                android:layout_weight="1"
                android:gravity="right"
                android:id="@+id/preciofin" />

            <TableRow></TableRow>
        </TableRow>

    </TableLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/pedidosbuttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/erase"
                android:text="@string/borrar" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/envButton" />

            <Button
                android:id="@+id/addProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/addButton"

                />

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
